tests/ui/fail/functions/duplicate.stderr
error: function duplicate
  --> tests/ui/fail/functions/duplicate.rs:12:9
   |
12 |         "DAY": fake_function,
   |         ^^^^^
